--- a/Azad-SPA/src/app/nav/nav.component.html
+++ b/Azad-SPA/src/app/nav/nav.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Azad App</a>
+  <div class="container">
+    <a class="navbar-brand" href="#">Azad App</a>
   
-    <ul class="navbar-nav mr-auto">
+    <ul *ngIf="logIn()"class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">Matches</a>
       </li>
@@ -10,21 +11,20 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#" >Messages</a>
-      </li>  
-      <li class="nav-item">
-        <a class="nav-link" (click)="logout()">Logout</a>
-      </li>      
+      </li>           
     </ul>
 
-    <div *ngIf="logIn()" class="dropdown">
-      <a class="dropdown-toggle text-light" >
-        Welcome User
+    <div *ngIf="logIn()" class="dropdown" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>
+        Welcome {{authSevice.decodedToken?.unique_name |titlecase}}
       </a>
     
-      <div class="dropdown-menu" >
-        <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit Profile</a>
+      <div class="dropdown-menu mt-3" *dropdownMenu>
+        <a class="dropdown-item" href="#">
+          <i class="fa fa-user"></i>Edit Profile</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Log out</a>
+        <a class="dropdown-item" (click)="logout()">
+          <i class="fa fa-sign-out"></i>Log out</a>
       </div>
     </div>
     
@@ -35,4 +35,6 @@
        placeholder="Password" required [(ngModel)]="model.password">
       <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
     </form>
+  </div>
+ 
 </nav>
