--- a/Azad-SPA/src/app/nav/nav.component.html
+++ b/Azad-SPA/src/app/nav/nav.component.html
@@ -15,8 +15,11 @@
     </ul>
 
     <div *ngIf="logIn()" class="dropdown" dropdown>
+      <span class="mr-1">
+        <img src="{{photoUrl}}" alt="">
+      </span>
       <a class="dropdown-toggle text-light" dropdownToggle>
-        Welcome {{authSevice.decodedToken?.unique_name |titlecase}}
+        Welcome {{authService.decodedToken?.unique_name |titlecase}}
       </a>
     
       <div class="dropdown-menu mt-3" *dropdownMenu>
